force-app/main/default/objects/RazorpayConfig__mdt/RazorpayConfig__mdt.object-meta.xml
<CustomObject>
    <label>Razorpay Config</label>
    <pluralLabel>Razorpay Configs</pluralLabel>
</CustomObject>