force-app/main/default/objects/RazorpayConfig__mdt/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <label>Base Url</label>
    <type>Url</type>
</CustomField>