force-app/main/default/objects/RazorpayConfig__mdt/fields/RazorpayKey__c.field-meta.xml
<CustomField>
    <fullName>RazorpayKey__c</fullName>
    <label>Razorpay Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>