force-app/main/default/objects/RazorpayConfig__mdt/fields/RazorpaySecret__c.field-meta.xml
<CustomField>
    <fullName>RazorpaySecret__c</fullName>
    <label>Razorpay Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>