force-app/main/default/objects/RazorpayConfig__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>&quot;v1&quot;</defaultValue>
    <label>Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>